# personal_budget_app

./: .copilot-instructions.md  .gitignore  DEPLOYMENT.md  Dockerfile  FILES_CREATED.md  IMPLEMENTATION_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  UV_GUIDE.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh  start.sh  verify_accounts_v2.py
.Jules/: palette.md
.github/: copilot-instructions.md
.jules/: bolt.md
src/: App.css  App.tsx  index.css
src/backend/: backfill.py  database.py  llm_service.py  main.py  transaction_analyzer.py
src/components/: AccountDetail.css  AccountDetail.tsx  AllTransactionsPage.tsx  BackfillStatus.css  BackfillStatus.tsx  CategoryBreakdown.css  CategoryBreakdown.tsx  DashboardHome.css  DashboardHome.tsx  FileUpload.css  FileUpload.tsx  HomePage.css  HomePage.tsx  MonthlySummary.css  MonthlySummary.tsx  Sidebar.css  Sidebar.tsx  SummaryStats.css  SummaryStats.tsx
src/components/__tests__/: CategoryBreakdown.test.tsx  CategoryBreakdownA11y.test.tsx  MonthlySummary.test.tsx  MonthlySummaryA11y.test.tsx  SpendingTrendsTab.test.tsx  SummaryStats.test.tsx
src/components/tabs/: AccountsTab.tsx  BackfillTab.tsx  IncomeExpenseTab.tsx  NetWorthTab.tsx  SpendingTrendsTab.tsx  Tabs.css  UploadTab.tsx
tests/: benchmark_account_status.py  benchmark_insert.py  benchmark_llm.py  benchmark_llm_parallelization.py  conftest.py  test_analyzer.py  test_api.py  test_backfill.py  test_database.py  test_llm_integration.py  test_llm_service.py
